@@ -1,5 +1,7 @@
 2006-02-05  Andrew Cagney  <cagney@redhat.com>
 
+	* funit.java: Delete package specification.
+
 	* funit.java: Import frysk.junit.Runner.
 
 	* funit.xml, funit.java: New files.
